fix dashboard scores alignment

--- a/packages/frontend/src/components/memberDashboardModal.css
+++ b/packages/frontend/src/components/memberDashboardModal.css
@@ -71,14 +71,13 @@ li:hover {
   color: blue;
   font-size: 1rem;
   display: flex;
-  flex-direction:row;
   justify-content: space-between;
   align-items: center; 
   padding: 0.3rem 0.2rem 0 0.8rem;
 }
 
 .stat {
-  font-weight: 600;
+  font-weight: 500;
   color: black;
 }
 
